architecture/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
  labels:
    app: django-base
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-base
  template:
    metadata:
      labels:
        app: django-base
    spec:
      containers:
      - name: django-base
        image: ghcr.io/arturgoms/django-base:1.0.2
        imagePullPolicy: Always
        ports:
          - containerPort: 8000
            name: gunicorn
      imagePullSecrets:
        - name: dockerconfigjson-github-com
---

apiVersion: v1
kind: Service
metadata:
  name: django-cluster-ip-service
spec:
  type: NodePort
  selector:
    app: django-base
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 31000
