architecture/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-service
spec:
  rules:
  - host: django.arturgomes.com.br
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: django-cluster-ip-service
              port:
                number: 8000
